--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
   "description": "Node.js mentoring",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "task-1-1": "node hw1/task1.js",
+    "task-1-1:watch": "nodemon hw1/task1.js",
+    "task-1-2": "node hw1/task2.js",
+    "task-1-2:watch": "nodemon hw1/task2.js --watch hw1 --ext js,csv",
+    "task-1-3-1:babel:dev": "babel-node hw1/babel/task31.js",
+    "task-1-3-1:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task31.js",
+    "task-1-3-1:babel:prod": "cd hw1/babel && babel task31.js utils.js -d dist && node dist/task31.js",
+    "task-1-3-2:babel:dev": "babel-node hw1/babel/task32.js",
+    "task-1-3-2:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task32.js --watch hw1/babel --ext js,csv",
+    "task-1-3-2:babel:prod": "cd hw1/babel && babel task32.js utils.js -d dist && cp books.csv dist && node dist/task32.js",
+    "task-1-3-1:esm": "node hw1/esm/task31.js",
+    "task-1-3-2:esm": "node hw1/esm/task32.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +29,20 @@
   "bugs": {
     "url": "https://github.com/dubbha/nodejs-mentoring/issues"
   },
-  "homepage": "https://github.com/dubbha/nodejs-mentoring#readme"
+  "homepage": "https://github.com/dubbha/nodejs-mentoring#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
+    "@babel/node": "^7.13.0",
+    "@babel/preset-env": "^7.13.9",
+    "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  }
 }
