reverse conversion from json to csv

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "task-1-1:watch": "nodemon hw1/task1.js",
     "task-1-2": "node hw1/task2.js",
     "task-1-2:watch": "nodemon hw1/task2.js --watch hw1 --ext js,csv",
-    "task-1-2:huge": "node hw1/hugify && node hw1/task2 huge",
+    "task-1-2:hugify": "node hw1/hugify",
+    "task-1-2:huge:csvtojson": "node hw1/task2 huge",
+    "task-1-2:huge:reverse": "node hw1/task2.reverse huge",
     "task-1-3-1:babel:dev": "babel-node hw1/babel/task31.js",
     "task-1-3-1:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task31.js",
     "task-1-3-1:babel:prod": "cd hw1/babel && babel task31.js utils.js -d dist && node dist/task31.js",
