--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "description": "Node.js mentoring",
   "main": "index.js",
   "scripts": {
-    "task-1-1": "node hw1/task1.js",
-    "task-1-1:watch": "nodemon hw1/task1.js",
-    "task-1-2": "node hw1/task2.js",
-    "task-1-2:watch": "nodemon hw1/task2.js --watch hw1 --ext js,csv",
+    "task-1-1": "node hw1/task1",
+    "task-1-1:watch": "nodemon hw1/task1",
+    "task-1-2": "node hw1/task2",
+    "task-1-2:watch": "nodemon hw1/task2 --watch hw1 --ext js,csv",
     "task-1-2:hugify": "node hw1/hugify",
     "task-1-2:huge:csvtojson": "node hw1/task2 huge",
     "task-1-2:huge:reverse": "node hw1/task2.reverse huge",
-    "task-1-3-1:babel:dev": "babel-node hw1/babel/task31.js",
-    "task-1-3-1:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task31.js",
-    "task-1-3-1:babel:prod": "cd hw1/babel && babel task31.js utils.js -d dist && node dist/task31.js",
-    "task-1-3-2:babel:dev": "babel-node hw1/babel/task32.js",
-    "task-1-3-2:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task32.js --watch hw1/babel --ext js,csv",
-    "task-1-3-2:babel:prod": "cd hw1/babel && babel task32.js utils.js -d dist && cp books.csv dist && node dist/task32.js",
-    "task-1-3-1:esm": "node hw1/esm/task31.js",
-    "task-1-3-2:esm": "node hw1/esm/task32.js"
+    "task-1-3-1:babel:dev": "babel-node hw1/babel/task31",
+    "task-1-3-1:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task31",
+    "task-1-3-1:babel:prod": "cd hw1/babel && babel task31.js utils.js -d dist && node dist/task31",
+    "task-1-3-2:babel:dev": "babel-node hw1/babel/task32",
+    "task-1-3-2:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task32 --watch hw1/babel --ext js,csv",
+    "task-1-3-2:babel:prod": "cd hw1/babel && babel task32.js utils.js -d dist && node dist/task32 ../books",
+    "task-1-3-1:esm": "node hw1/esm/task31",
+    "task-1-3-2:esm": "node hw1/esm/task32",
+    "task-1-3-1:ts:dev": "ts-node hw1/ts/task31",
+    "task-1-3-1:ts:prod": "cd hw1/ts && tsc && node dist/task31",
+    "task-1-3-2:ts:dev": "cd hw1/ts && ts-node task32",
+    "task-1-3-2:ts:prod": "cd hw1/ts && tsc && node dist/task32 ../books",
+    "task-1-3-2:ts:dev:hugify": "ts-node hw1/ts/hugify",
+    "task-1-3-2:ts:dev:huge:csvtojson": "cd hw1/ts && ts-node task32 huge",
+    "task-1-3-2:ts:dev:huge:reverse": "cd hw1/ts && ts-node task32.reverse huge",
+    "task-1-3-2:ts:prod:huge:csvtojson": "cd hw1/ts && tsc && node dist/task32 ../huge",
+    "task-1-3-2:ts:prod:huge:reverse": "cd hw1/ts && tsc && node dist/task32.reverse ../huge"
   },
   "repository": {
     "type": "git",
@@ -38,7 +47,10 @@
     "@babel/core": "^7.13.8",
     "@babel/node": "^7.13.0",
     "@babel/preset-env": "^7.13.9",
-    "nodemon": "^2.0.7"
+    "@types/node": "^14.14.34",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "csvtojson": "^2.0.10"
@@ -47,5 +59,8 @@
     "presets": [
       "@babel/preset-env"
     ]
+  },
+  "engines": {
+    "node": ">= 15"
   }
 }
