--- a/package.json
+++ b/package.json
@@ -1,66 +1,75 @@
 {
   "name": "nodejs-mentoring",
-  "version": "1.0.0",
-  "description": "Node.js mentoring",
-  "main": "index.js",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "task-1-1": "node hw1/task1",
-    "task-1-1:watch": "nodemon hw1/task1",
-    "task-1-2": "node hw1/task2",
-    "task-1-2:watch": "nodemon hw1/task2 --watch hw1 --ext js,csv",
-    "task-1-2:hugify": "node hw1/hugify",
-    "task-1-2:huge:csvtojson": "node hw1/task2 huge",
-    "task-1-2:huge:reverse": "node hw1/task2.reverse huge",
-    "task-1-3-1:babel:dev": "babel-node hw1/babel/task31",
-    "task-1-3-1:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task31",
-    "task-1-3-1:babel:prod": "cd hw1/babel && babel task31.js utils.js -d dist && node dist/task31",
-    "task-1-3-2:babel:dev": "babel-node hw1/babel/task32",
-    "task-1-3-2:babel:dev:watch": "nodemon --exec babel-node hw1/babel/task32 --watch hw1/babel --ext js,csv",
-    "task-1-3-2:babel:prod": "cd hw1/babel && babel task32.js utils.js -d dist && node dist/task32 ../books",
-    "task-1-3-1:esm": "node hw1/esm/task31",
-    "task-1-3-2:esm": "node hw1/esm/task32",
-    "task-1-3-1:ts:dev": "ts-node hw1/ts/task31",
-    "task-1-3-1:ts:prod": "cd hw1/ts && tsc && node dist/task31",
-    "task-1-3-2:ts:dev": "cd hw1/ts && ts-node task32",
-    "task-1-3-2:ts:prod": "cd hw1/ts && tsc && node dist/task32 ../books",
-    "task-1-3-2:ts:dev:hugify": "ts-node hw1/ts/hugify",
-    "task-1-3-2:ts:dev:huge:csvtojson": "cd hw1/ts && ts-node task32 huge",
-    "task-1-3-2:ts:dev:huge:reverse": "cd hw1/ts && ts-node task32.reverse huge",
-    "task-1-3-2:ts:prod:huge:csvtojson": "cd hw1/ts && tsc && node dist/task32 ../huge",
-    "task-1-3-2:ts:prod:huge:reverse": "cd hw1/ts && tsc && node dist/task32.reverse ../huge"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dubbha/nodejs-mentoring.git"
-  },
-  "keywords": [
-    "nodejs"
-  ],
-  "author": "Oleksiy Dubovyk",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dubbha/nodejs-mentoring/issues"
-  },
-  "homepage": "https://github.com/dubbha/nodejs-mentoring#readme",
-  "devDependencies": {
-    "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.8",
-    "@babel/node": "^7.13.0",
-    "@babel/preset-env": "^7.13.9",
-    "@types/node": "^14.14.34",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/swagger": "^4.8.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.6",
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
+  "devDependencies": {
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.0",
+    "@nestjs/testing": "^7.6.15",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.36",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.0.18",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.2.3"
   },
-  "engines": {
-    "node": ">= 15"
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
