--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coveragePathIgnorePatterns": [
+      "main.ts",
+      ".module.ts$"
+    ],
     "testEnvironment": "node"
   }
 }
