--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:create": "ts-node node_modules/typeorm/cli.js migration:create -n migration",
-    "migration:generate": "ts-node node_modules/typeorm/cli.js migration:generate -n migration",
-    "migration:run": "ts-node node_modules/typeorm/cli.js migration:run",
-    "migration:revert": "ts-node node_modules/typeorm/cli.js migration:revert"
+    "typeorm": "cross-env MIGRATION=true ts-node node_modules/typeorm/cli.js",
+    "migration:create": "npm run typeorm migration:create -- -n migration",
+    "migration:generate": "npm run typeorm migration:generate -n migration",
+    "migration:run": "npm run typeorm  migration:run",
+    "migration:revert": "npm run typeorm  migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
@@ -37,8 +38,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.32",
-    "uuid": "^8.3.2"
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -50,6 +50,7 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
