--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
       - name: lint
         run: npm run lint
       - name: test
-        run: npm run test:cov
+        run: |
+          - npm run test:cov
+          - npm run test:e2e
       - name: build
         run: npm run build
