--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm run lint
       - name: test
         run: |
-          - npm run test:cov
-          - npm run test:e2e
+          npm run test:cov
+          npm run test:e2e
       - name: build
         run: npm run build
