--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
+    "argon2": "^0.27.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "pg": "^8.6.0",
