--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "argon2": "^0.27.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "helmet": "^4.6.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
